<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="75dp"
        app:layout_constraintBottom_toTopOf="@+id/false_button"
        app:layout_constraintStart_toStartOf="@+id/answerOnQuestion"
        app:layout_constraintTop_toBottomOf="@+id/answerOnQuestion"
        android:textSize="40sp" />

    <Button
        android:id="@+id/false_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="22dp"
        android:backgroundTint="@color/purple_200"
        android:text="@string/false_button"
        app:layout_constraintBottom_toTopOf="@+id/button_back"
        app:layout_constraintEnd_toStartOf="@+id/true_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textOne"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="14dp"
        android:drawableEnd="@drawable/arrow_right"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="@+id/button_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_back"
        app:layout_constraintTop_toBottomOf="@+id/false_button"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/true_button"
        android:layout_width="0dp"

        android:layout_height="0dp"
        android:layout_marginEnd="14dp"
        android:backgroundTint="@color/purple_200"
        android:text="@string/true_button"
        app:layout_constraintBottom_toTopOf="@+id/next_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/false_button"
        app:layout_constraintTop_toTopOf="@+id/false_button"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/answerOnQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="290dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="47dp"
        app:layout_constraintBottom_toTopOf="@+id/textOne"
        app:layout_constraintEnd_toStartOf="@+id/true_button"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        android:textSize="40sp" />


    <Button
        android:id="@+id/button_back"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="12dp"
        android:drawableEnd="@drawable/arrow_left"
        android:text="@string/button_back"
        app:layout_constraintBottom_toTopOf="@+id/cheat_button"
        app:layout_constraintEnd_toStartOf="@+id/next_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/false_button"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/procent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/cheat_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/black"
        android:text="@string/Cheat_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_back"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>